Upgrade from CDK 1.50 to 1.100

--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "cognito-test": "jest --group=cognito",
     "api-test": "jest --group=api",
     "handler-test": "jest --group=handler",
-    "deploy": "cdk deploy --require-approval never --verbose"
+    "deploy": "cdk deploy CognitoIdp-Local --require-approval never --verbose"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.50.0",
-    "@aws-cdk/aws-apigateway": "^1.50.0",
-    "@aws-cdk/aws-certificatemanager": "^1.50.0",
-    "@aws-cdk/aws-cloudfront": "^1.50.0",
-    "@aws-cdk/aws-cognito": "^1.50.0",
-    "@aws-cdk/aws-dynamodb": "^1.50.0",
-    "@aws-cdk/aws-route53-targets": "^1.50.0",
-    "@aws-cdk/aws-s3-deployment": "^1.50.0",
-    "@aws-cdk/cx-api": "^1.50.0",
-    "@aws-cdk/region-info": "^1.50.0",
+    "@aws-cdk/assert": "^1.100.0",
+    "@aws-cdk/aws-apigateway": "^1.100.0",
+    "@aws-cdk/aws-certificatemanager": "^1.100.0",
+    "@aws-cdk/aws-cloudfront": "^1.100.0",
+    "@aws-cdk/aws-cognito": "^1.100.0",
+    "@aws-cdk/aws-dynamodb": "^1.100.0",
+    "@aws-cdk/aws-route53-targets": "^1.100.0",
+    "@aws-cdk/aws-s3-deployment": "^1.100.0",
+    "@aws-cdk/cx-api": "^1.100.0",
+    "@aws-cdk/region-info": "^1.100.0",
     "@types/aws-lambda": "^8.10.58",
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
@@ -39,7 +39,7 @@
     "@types/node": "10.17.5",
     "@types/qs": "^6.9.2",
     "@types/uuid": "^7.0.3",
-    "aws-cdk": "^1.50.0",
+    "aws-cdk": "^1.100.0",
     "browserify": "^16.5.1",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
@@ -51,14 +51,14 @@
     "ts-node": "^8.10.2",
     "tsify": "^4.0.2",
     "tslint": "^6.1.2",
-    "typescript": "~3.7.2"
+    "typescript": "~3.9.9"
   },
   "dependencies": {
-    "@aws-cdk/aws-secretsmanager": "^1.50.0",
-    "@aws-cdk/core": "^1.50.0",
+    "@aws-cdk/aws-secretsmanager": "^1.100.0",
+    "@aws-cdk/core": "^1.100.0",
     "@types/facebook-js-sdk": "^3.3.0",
     "@types/js-cookie": "^2.2.6",
-    "aws-sdk": "^2.712.0",
+    "aws-sdk": "^2.893.0",
     "axios": "^0.21.1",
     "csv-writer": "^1.6.0",
     "js-cookie": "^2.2.1",
