--- a/package.json
+++ b/package.json
@@ -19,19 +19,7 @@
     "deploy": "cdk deploy CognitoIdp-Local --require-approval never --verbose"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.100.0",
-    "@aws-cdk/aws-apigateway": "^1.100.0",
-    "@aws-cdk/aws-certificatemanager": "^1.100.0",
-    "@aws-cdk/aws-cloudfront": "^1.100.0",
-    "@aws-cdk/aws-cognito": "^1.100.0",
-    "@aws-cdk/aws-dynamodb": "^1.100.0",
-    "@aws-cdk/aws-route53-targets": "^1.100.0",
-    "@aws-cdk/aws-s3-deployment": "^1.100.0",
-    "@aws-cdk/cx-api": "^1.100.0",
-    "@aws-cdk/region-info": "^1.100.0",
     "@types/aws-lambda": "^8.10.58",
-    "@types/axios": "^0.14.0",
-    "@types/dotenv": "^8.2.0",
     "@types/fs-extra": "^8.1.1",
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.3.9",
@@ -39,7 +27,7 @@
     "@types/node": "10.17.5",
     "@types/qs": "^6.9.2",
     "@types/uuid": "^7.0.3",
-    "aws-cdk": "^1.100.0",
+    "aws-cdk": "^2.0.0-alpha.4",
     "browserify": "^16.5.1",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
@@ -54,12 +42,13 @@
     "typescript": "~3.9.9"
   },
   "dependencies": {
-    "@aws-cdk/aws-secretsmanager": "^1.100.0",
-    "@aws-cdk/core": "^1.100.0",
     "@types/facebook-js-sdk": "^3.3.0",
     "@types/js-cookie": "^2.2.6",
+    "aws-cdk-lib": "^2.0.0-alpha.4",
+    "aws-cdk-migration": "^1.100.0",
     "aws-sdk": "^2.893.0",
     "axios": "^0.21.1",
+    "constructs": "^10.0.0",
     "csv-writer": "^1.6.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
