--- a/package.json
+++ b/package.json
@@ -16,56 +16,46 @@
     "cognito-test": "jest --group=cognito",
     "api-test": "jest --group=api",
     "handler-test": "jest --group=handler",
-    "deploy": "cdk deploy --require-approval never --verbose"
+    "deploy": "cdk deploy CognitoIdp-Local --require-approval never --verbose"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.50.0",
-    "@aws-cdk/aws-apigateway": "^1.50.0",
-    "@aws-cdk/aws-certificatemanager": "^1.50.0",
-    "@aws-cdk/aws-cloudfront": "^1.50.0",
-    "@aws-cdk/aws-cognito": "^1.50.0",
-    "@aws-cdk/aws-dynamodb": "^1.50.0",
-    "@aws-cdk/aws-route53-targets": "^1.50.0",
-    "@aws-cdk/aws-s3-deployment": "^1.50.0",
-    "@aws-cdk/cx-api": "^1.50.0",
-    "@aws-cdk/region-info": "^1.50.0",
-    "@types/aws-lambda": "^8.10.58",
-    "@types/axios": "^0.14.0",
-    "@types/dotenv": "^8.2.0",
-    "@types/fs-extra": "^8.1.1",
-    "@types/jest": "^26.0.0",
-    "@types/jsonwebtoken": "^8.3.9",
-    "@types/jwk-to-pem": "^2.0.0",
+    "@types/aws-lambda": "^8.10.85",
+    "@types/fs-extra": "^8.1.2",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/jwk-to-pem": "^2.0.1",
     "@types/node": "10.17.5",
-    "@types/qs": "^6.9.2",
-    "@types/uuid": "^7.0.3",
-    "aws-cdk": "^1.50.0",
+    "@types/qs": "^6.9.7",
+    "@types/uuid": "^7.0.5",
+    "aws-cdk": "^2.0.0",
     "browserify": "^16.5.1",
     "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.0.0",
     "jest-runner-groups": "^1.1.1",
     "rocketcdk": "^0.1.1",
-    "ts-jest": "^26.0.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^8.10.2",
     "tsify": "^4.0.2",
     "tslint": "^6.1.2",
-    "typescript": "~3.7.2"
+    "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@aws-cdk/aws-secretsmanager": "^1.50.0",
-    "@aws-cdk/core": "^1.50.0",
-    "@types/facebook-js-sdk": "^3.3.0",
-    "@types/js-cookie": "^2.2.6",
-    "aws-sdk": "^2.712.0",
-    "axios": "^0.21.1",
+    "@aws-cdk/assert": "^2.0.0",
+    "@types/facebook-js-sdk": "^3.3.5",
+    "@types/js-cookie": "^2.2.7",
+    "aws-cdk-lib": "^2.0.0",
+    "aws-cdk-migration": "^1.134.0",
+    "aws-sdk": "^2.1042.0",
+    "axios": "^0.21.4",
+    "constructs": "^10.0.9",
     "csv-writer": "^1.6.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.3",
     "qs": "^6.9.3",
-    "source-map-support": "^0.5.19",
+    "source-map-support": "^0.5.21",
     "uuid": "^7.0.3"
   }
 }
