--- a/package.json
+++ b/package.json
@@ -32,14 +32,10 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.6.0",
     "fs-extra": "^9.0.1",
-    "jest": "^26.0.0",
-    "jest-runner-groups": "^1.1.1",
+    "jest-runner-groups": "^2.2.0",
     "rocketcdk": "^0.1.1",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^8.10.2",
     "tsify": "^4.0.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.10"
+    "tslint": "^6.1.2"
   },
   "dependencies": {
     "@aws-cdk/assert": "^2.0.0",
@@ -56,6 +52,8 @@
     "jwk-to-pem": "^2.0.3",
     "qs": "^6.9.3",
     "source-map-support": "^0.5.21",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
     "uuid": "^7.0.3"
   }
 }
